@@ -4,6 +4,11 @@ include Conv
 
 open Extlib.IO
 
+(** {6 Types}*)
+#if ocaml_version < (3, 11) (*The type was renamed between versions*)
+type 'a sexp_opaque = 'a
+#endif
+
 (** {6 Parsing}*)
 
 let reraise_parse_error pe global_pos =
