@@ -1,5 +1,7 @@
 2009-01-27  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/toolchain/batlib_Sexp_Conv.mli: [opaque] renamed [sexp_opaque]
+
 	* src/core/toolchain/_tags: batlib_Sexp_Conv.ml now uses [use_optcomp]
 
 	* src/core/toolchain/batlib_Sexp_Conv.ml: added #if for [ParseError]/[Parse_error] upstream renaming
